tests/NormalTests/paczka1/small_fuzzy/64543599.err
Error in line 1: 2wR2zUR5Roo A725 87,0
Error in line 8: geUx A725 141,3
Error in line 13: geUx S332 66,2
Error in line 14: geUx S455 32,8
